Use article layout for articles.

--- a/source/articles/other-isomorphic-keyboards.html.md.erb
+++ b/source/articles/other-isomorphic-keyboards.html.md.erb
@@ -1,9 +1,4 @@
-<div class="container article-show">
-  <div class="row">
-    <div class="col col-lg-8 offset-1">
-      <div class="section section--top article-body" markdown="1">
-
-# Other Isomorphic Keyboards
+<h1>Other Isomorphic Keyboards</h1>
 
 One of the cardinal sins of productivity is to do what has already been
 done. But in my quest to test an isomorphic keyboard against the
@@ -110,7 +105,3 @@ an advantage in the ease of adoption.
 1.  ["Hexagonal isomorphic keyboards in a musical instrument probably stem from the early 19th century accordion or concertina."](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
 
 2.  You might have realized that the last link is in fact a link to Dodeka, a company that was once producing a linear isomorphic keyboard. This does make my work partially redundant. In my defense, they weren't selling this when I made the LIK.
-
-</div>
-</div>
-</div>
