--- a/source/articles/the-practice-routine.html.md.erb
+++ b/source/articles/the-practice-routine.html.md.erb
@@ -1,54 +1,162 @@
-<div class="container">
-  <div class="row">
-    <div class="col col-lg-8 section section--top article-body" markdown="1">
+<div class="container article-show">
+  <section class="section section--top">
+    <div class="row">
+      <h1 class="col offset-lg-1">The Practice Routine</h1>
+    </div>
+    <div class="row">
+      <div class="col col-lg-8 offset-lg-1" markdown="1">
 
+## Developing the curriculum
 
-# The Practice Routine
+I want to test the keyboards against each other with three main domains
+of musical prowess: fundamentals, sight reading, and playing by ear.
+Fundamentals are the ability of the pianist to play musical patterns,
+while sight reading and playing by ear are more about how the pianist
+determines what shapes to play given the input of written or sounded
+music.
 
-I developed the musical curriculum around three main domains of musical prowess: fundamentals (tested by scales and exercises), sight reading, and playing by ear.
+When choosing the exercises to practice, I had a couple things that I
+valued. First is how popular or canon the exercise is. I don't want to
+be practicing content that is wildly different from what is standard. I
+also want the practice session to be somewhat diverse, and exercise
+different aspects of my abilities. Focusing on one type of exercise
+could highlight certain weaknesses of a keyboard but would create blind
+spots in my assessments.
 
-## Sight Reading and Playing By Ear
+### Fundamentals
 
-I had some difficulty coming up with material for the the latter two. Both playing by ear and sight reading have the unique challenge of being unrepeatable. The second time sight reading or playing a piece of music by ear will be easier than the first, as you will have familiarity with it the second time through. Thus it is unfair to test sight reading with content that had already been sight-read: the second keyboard reading the material would have the advantage. For parity, the content must be new.
+Taking these values into consideration, for the fundamentals I am
+choosing to practice scales and arpeggios, Hanon: The Virtuoso Pianist
+in Sixty Exercises, and Slonimsky's Thesaurus of Scales and Musical
+Patterns.
 
-This is where EarMaster 7 comes in. This software generates music to be sight read or played by ear, and you can define the parameters beforehand. This allows me to practice music that has a general difficulty that is completely unique. The software isn&#39;t perfect, but it&#39;s what I&#39;m going to work with for the moment.
+Scales and the arpeggios were the easiest decision, as they the most
+standard set of exercises. I'm going to be practicing major, melodic
+minor, harmonic minor, and natural minor scales in two octaves, and
+major and minor arpeggios.
 
-## Fundamentals
+It was also easy to choose to practice Hanon. It is also a very popular
+set of exercises, and Hanon will help me determine how difficult it will
+be to achieve equitable finger agility on the LIK. Unlike scales, the
+LIK will have no transpositional advantage, and will probably be
+disadvantaged, as almost all of the exercises in the book are in the key
+of C major, making it easier on the traditional keyboard.
 
-Choosing the material to practice for the fundamentals is a little bit more difficult. I tried to pick exercises that were standard and that tested different aspects of my technical abilities. I ultimately chose three different sets of exercises: scales and arpeggios, Hanon: The Virtuoso Pianist in Sixty Exercises, and Slonimsky&#39;s Thesaurus of Scales and Musical Patterns.
+The last set of exercises by Slonimsky is one that I find fascinating.
+Chosen for its unique content rather than popularity, the Thesaurus
+should do well to expose technical limitations on either keyboard. If
+there was any content that is not written for the traditional keyboard,
+it would be the Thesaurus.
 
-Scales and the arpeggios were the easiest decision, as they are probably the most standard set of exercises. I&#39;m going to be practicing major, melodic minor, harmonic minor, and natural minor scales in two octaves, and major and minor arpeggios.
+### Sight Reading and Playing By Ear
 
-It was easy to choose to practice Hanon&#39;s finger exercises. It is one of the most popular sets of exercises for the piano, and unlike the other exercises that are focused on the musical passage, Hanon seeks to achieve &quot;agility, independence, strength and perfect evenness in the fingers.&quot; Unlike scales, the LIK will have no transpositional advantage, and will probably be disadvantaged, as a vast majority of the exercises in the book are in the key of C, making it easier on the traditional keyboard. It is also possible that this set of exercises will expose technical limitations of the LIK.
+Sight reading and playing by ear are difficult to find exercises for as
+they have the unique challenge of being unrepeatable. The second time
+sight reading or playing a piece of music by ear will be easier than the
+first, the performer will have familiarity with it the second time
+through. Thus it is unfair to compare two keyboards with the same music.
+For parity, the content must be new.
 
-The last set of exercises by Slonimsky is one that I find fascinating. Atypical in comparison to the other content, the Thesaurus should do well to expose technical limitations on either keyboard. If there was any content that is not written for the traditional keyboard, it would be the Thesaurus.
-
-## An imperfect, malleable practice routine
-
-There is content that is missing. Notably, I&#39;m not going to be practicing chords in fundamentals, sight reading, or playing by ear, and I think that it will be a necessary addition in the future. I might need to begin to practice real songs, etudes, or solos in the future for playing by ear or sight reading.
-
-I&#39;m not concerned about having a &quot;complete&quot; or &quot;perfect&quot; practice routine upon starting the experiment, partially because there is no perfect practice routine, but also because I think that I should be able to change the practice routine in the future. I think the practice sessions will be fair enough, as long as I am practicing the same exercise sets for the same amount of time on each keyboard. This is potentially a confounding variable, but I recognize that my practice sessions will have to change over time to accommodate my improvement as well as my initial mistakes in assigning content. I would rather have an imperfect, dynamic practice routine than a static, unimprovable practice routine.
+EarMaster 7 is software that addresses this problem, as it generates
+music to be sight read or played by ear from predefined parameters. This
+allows me to practice music that has a general difficulty that is
+completely unique. The software isn't perfect, but it's what I'm going
+to work with for the moment.
 
 ## Method of practicing
 
-I will practice each set of exercises for the same amount of time (and thus each domain of musical prowess for the same amount of time), but I won&#39;t force myself to practice the same exercise for the same amount of time, so each keyboard will be allowed to improve at its own pace. I&#39;m going to be alternating the order that I play the keyboards if I play both keyboards in the same day to avoid a potentially confounding variable.<sup>1</sup>
+I will practice each set of exercises for the same amount of time (and
+thus each domain of musical prowess for the same amount of time), but I
+won't force myself to practice the same exercise for the same amount of
+time, so each keyboard will be allowed to improve at its own pace. I'm
+going to be alternating the order that I play the keyboards if I play
+both keyboards in the same day to avoid a potentially confounding
+variable.^1^
 
-I have broken up each exercises into a set of incrementing difficulties, which is often just incrementing tempo from 60 bpm to 120 bpm. The increments are created from my metronome markings, which are increase the speed by about 2-4%.
+I have broken up each exercises into a set of incrementing difficulties.
+For fundamentals this means increasing tempo, while for sight reading
+and playing by ear it is also changing ambitus and largest intervals.
+which is often just incrementing tempo from 60 bpm to 120 bpm. The
+increments are created from my metronome markings, which are increase
+the speed by about 2-4%.
 
-I am using this [Airtable](https://airtable.com/shrjk2lTpQWFpgd26) to keep track of all of my improvement. You can find all of the increments for all of the exercises there.
+## An imperfect, malleable practice routine
 
-All of my practice sessions will be recorded. You can find the pages for the practice sessions here. You can find the detailed content of what I am going to practice here. [You can see my progress here](https://linearisomorphickeyboard.com/progress/).
+There is content that I would like to assess that this is missing from
+the curriculum. Notably, I'm not going to be practicing chords at all,
+and I think that it will be a necessary addition in the future. I also
+might want to compare the keyboards using real songs, etudes, or solos
+in the future.
 
-The initial practice session
+Changing the exercises midway through the experiment will complicate the
+results of the experiment. The rate of improvement is best measured with
+increments that both keyboards practiced (as it removes the confounding
+variable of increments of varying difficulty), and switching exercises
+will allbuut ensure that there are unpracticed increments on one of the
+keyboards.
 
-- 5 minutes of scales and arpeggios
-- 5 minutes of Hanon
-- 5 minutes of the Thesaurus of Scales and Musical Patterns
-- 10 minutes of sight reading
-- 10 minutes of melodic transcription
+However, I do not think that this will completely spoil the data from
+the experiment, and it is better than the alternative of an immutable
+curriculum. The content of the practice sessions will have to change
+over time to accommodate my improvement as well as my initial mistakes
+in choosing content. I am not going to pursue the ideal of a static,
+unimprovable practice routine in favor of a dynamic practice routine
+with imperfect results.
 
-1. There is a potential confounding variable in the order that I practice the keyboards if I practice both in the same day. If I always play the LIK first and the TK second, the LIK might benefit from my mind being fresh, or the TK might benefit from me already being warmed up. I am going to keep track of each time I practice both keyboards in one day, so the next time I practice both keyboards I can alternate the order.
+## The curriculum
+
+After all this deliberation over what I would practice, here is the
+schedule I came up with:
+
+-   5 minutes of scales and arpeggios
+
+-   5 minutes of Hanon
+
+-   5 minutes of the Thesaurus of Scales and Musical Patterns
+
+-   10 minutes of sight reading
+
+-   10 minutes of melodic transcription
+
+And I never actually practiced that curriculum. I change the curriculum
+for my first practice session, and after a few sessions I have landed on
+this schedule:
+
+-   15 minutes of scales and arpeggios
+
+-   15 minutes of Hanon
+
+-   15 minutes of sight reading
+
+-   15 minutes of melodic transcription
+
+I have been practicing considerably more than I initially planned, so I
+now play each keyboard for an hour. On top of this, I am not practicing
+the Thesaurus. Although it is some of the most interesting curriculum, I
+realized how little time fifteen minutes is (let alone five), and I
+concluded that I shut put this valuable time towards scales and Hanon
+instead.
+
+## Conclusion
+
+I chose exercises to asses fundamentals, sight reading, and playing by
+ear with reputation, popularity, and diversity in mind. I recognize that
+the chosen content isn't perfect or complete, so I fully expect the
+curriculum to change throughout the experiment. And just a few practice
+sessions in, it already has.
+
+I am using this
+[Airtable](https://airtable.com/shrjk2lTpQWFpgd26) to keep
+track of all of my improvement. You can find all of the increments for
+all of the exercises there.
+
+All of my practice sessions will be recorded. You can find the detailed
+content of what I am going to practice here. You can see my progress
+[here](https://linearisomorphickeyboard.com/progress/).
+
+1.  There is a potential confounding variable in the order that I practice the keyboards if I practice both in the same day. If I always play the LIK first and the TK second, the LIK might benefit from my mind being fresh, or the TK might benefit from me already being warmed up. I am going to keep track of each time I practice both keyboards in one day, so the next time I practice both keyboards I can alternate the order.
 
 </div>
 </div>
+</section>
 </div>
