--- a/source/articles/index.html.erb
+++ b/source/articles/index.html.erb
@@ -1,3 +1,7 @@
+---
+layout: layout
+---
+
 <div class="container section section--top">
   <h1 class="section__header">Articles</h1>
   <div class="row"> 
