--- a/source/stylesheets/custom/_article.css.scss
+++ b/source/stylesheets/custom/_article.css.scss
@@ -28,10 +28,14 @@
   h1, h2, h3, h4, h5, h6 {
     font-family: Graphit;
     font-weight: 500;
+    margin: 4rem 0 2rem;
   }
   h1 {
     font-size: 64px;
     font-weight: 700;
+    // Escape the grid on the right side
+    margin-right: calc(-50vw + 50%);
+    margin: 4rem 0 4rem;
   }
   h2 {
     font-size: 42px;
@@ -57,6 +61,13 @@
 
   p {
     margin: 2rem 0;
+  }
+
+
+  // Escaping the layout
+  .breakout {
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
   }
 }
 
