Add article content and links

--- a/source/articles/index.html.erb
+++ b/source/articles/index.html.erb
@@ -46,8 +46,20 @@ layout: layout
       <div class="col col-lg-8">
         <ul>
           <li class="article">
-            <a href="/reflections/the-initial-assessment/">
-              <h2 class="article__title">Assessment Reflection</h2>
+            <a href="/reflections/reflection-1/">
+              <h2 class="article__title">Reflection #1: the assessment</h2>
+              <div class="">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
+            </a>
+          </li>
+          <li class="article">
+            <a href="/reflections/reflection-2/">
+              <h2 class="article__title">Reflection #2: 15 hours</h2>
+              <div class="">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
+            </a>
+          </li>
+          <li class="article">
+            <a href="/reflections/reflection-3/">
+              <h2 class="article__title">Reflection #3: 33 hours</h2>
               <div class="">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
             </a>
           </li>
