--- a/source/articles/the-idea.html.md.erb
+++ b/source/articles/the-idea.html.md.erb
@@ -1,143 +1,61 @@
-<div class="container">
-  <div class="row">
-    <div class="col-12 col-lg-8 section section--top article-body" markdown="1">
-
-#The Idea
+# The Idea
 
 There may be a better way to design the piano.
 
-It is known that to master an instrument you must learn to play it in
-every key. The first key a new pianist will learn to play is the key of
-C major. It is wonderfully simple: just play the white notes. But the
-price of a simple C major comes at the cost of increased difficulty and
-complexity for the other keys.
+It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major. It is wonderfully simple: just play the white notes. But the price of a simple C major comes at the cost of increased difficulty and complexity for the other keys.
 
-But why is the piano designed this way? At first it may appear that the
-keyboard was made for beginners and we never took the training wheels
-off, but this is not the case.
+But why is the piano designed this way? At first it may appear that the keyboard was made for beginners and we never took the training wheels off, but that is not the case.
 
-In 1361, Nicholas Faber designed an organ for Haberstaldt, Germany. This
-organ is the first known application of the traditional keyboard layout
-we know and use today. A couple significant musical advances occurred
-between the invention of the Haberstaldt keyboard (which I will call the
-traditional keyboard) and its implementation on the first piano 350
-years later.
+In 1361, Nicholas Faber designed an organ for a church in Haberstaldt, Germany. This organ is the first known application of the traditional keyboard layout we know and use today. A couple significant musical advances occurred between the invention of the Haberstaldt keyboard (which I will call the traditional keyboard) and its implementation on the first piano 350 years later.
 
-Equal temperament was discovered in 1584, which meant that an instrument
-could be tuned in a way that would allow it to play in any key. Before
-equal temperament, instruments could only be tuned to play in one
-key.<sup>1</sup>
+Equal temperament was discovered in 1584, which meant that an instrument could be tuned in a way that would allow it to play in any key. Before equal temperament, instruments could only be tuned to play in one key.<sup>1</sup>
 
-Throughout the 17th century, Western music transitioned from modality to
-tonality. To put it way too simply, one of the effects of this switch to
-tonality was that people wanted to play in more than one key.<sup>2</sup>
+Throughout the 17th century, Western music transitioned from modality to tonality. To put it way too simply, one of the effects of this switch to tonality was that people wanted to play in more than one key.<sup>2</sup>
 
-The traditional keyboard layout is perfect if you only want to play in C
-major. The traditional keyboard layout was not designed for beginners,
-but for a different musical era.
+The traditional keyboard layout was not designed for beginners, but for a different musical era.
 
-So how can we improve the keyboard? Remove the C major bias and make all
-keys equally difficult to play?
+So how can we improve the keyboard? Remove the C major bias and make all keys equally difficult to play?
 
-We can do better. Make all keys equal, and in the process, make all keys
-the same.
+We can do better. Make all keys equal, and in the process, make all keys the same.
 
-</div>
-<div class="col-12">
-  <%= image_tag "LIK-solo.png" %>
-</div>
-<div class="col-12 col-lg-8 section" markdown="1">
+<%= image_tag "LIK-hero.png" %>
 
 This is the Linear Isomorphic Keyboard.
 
-The term isomorphism, when applied to musical instruments, means that
-any distinct musical phrase---be it a chord or a sonata---can be played
-the same way regardless of the note that it starts on.<sup>3</sup>
+The term isomorphism, when applied to musical instruments, means that any distinct musical phrase---be it a chord or a sonata---can be played the same way regardless of the note that it starts on.<sup>3</sup>
 
-What does this mean? On the linear isomorphic keyboard (LIK) there is
-one way to play all of the major scales. You don't learn to play *a*
-major scale, you learn how to play *the* major scale. There is one way
-to play a perfect fifth, instead of four.<sup>4</sup> If you can play "Für Elise"
-in one key, you can play it in every key.
+What does this mean? On the linear isomorphic keyboard (LIK) there is one way to play all of the major scales. You don't learn to play *a* major scale, you learn how to play *the* major scale. There is only one way to play a perfect fifth, instead of four.<sup>4</sup> If you can play "Für Elise" in one key, you can play it in every key.
 
-This has been done before. There are plenty of isomorphic keyboards.
-Most of them feature a grid of square or hexagonal tiles, with the
-relation between adjacent tiles determined by particular intervals. But
-I think that similarities the LIK shares with the traditional keyboard
-<a href="/articles/other-isomorphic-keyboards">gives it an edge over other isomorphic keyboards</a>.
+This has been done before. There are plenty of isomorphic keyboards. Most of them feature a grid of square or hexagonal tiles, with the relation between adjacent tiles determined by particular intervals. But I think that similarities the LIK shares with the traditional keyboard [gives it an edge over other isomorphic keyboards](https://likeyboard.io/articles/other-isomorphic-keyboards/).
 
-Even the LIK isn't a new concept. The keyboard [was patented in
-1953](https://www.google.com/patents/US2627777), and last
-year there was [a Kickstarter for a
-prototype](https://www.kickstarter.com/projects/176239/dodeka-music-finally-within-everyones-reach/)
-courtesy of [Dodeka](http://www.dodeka.info/), but none
-are currently available for purchase.
+Even the LIK isn't a new concept. The keyboard [was patented in 1953](https://www.google.com/patents/US2627777), and [Dodeka](http://www.dodeka.info/stellar/) is creating a three octave midi-controller with the same layout.
 
-But the most important question about the LIK (and other isomorphic
-keyboards) still demands an answer: Is it better than the traditional
-keyboard?
+But the most important question about the LIK (and other isomorphic keyboards) still demands an answer: Is it better than the traditional keyboard?
 
-I'm not sure. But I'm going to find out.
+I'm not sure, but I'm trying to find out.
 
-I'm performing an experiment, comparing my improvement on two keyboards:
-the LIK and the traditional keyboard. I will practice the same content
-for the same amount of time on each keyboard, record all of the practice
-sessions, and periodically publish assessments. It is not a perfect
-study, but I think the findings will still provide valuable insight about the viability of the LIK.
+I'm performing an experiment, comparing my improvement on two keyboards: the LIK and the traditional keyboard. I will practice the same content for the same amount of time on each keyboard, record all of the practice sessions, and periodically publish assessments. It is not a perfect study, but I think the findings will still provide valuable insight about the viability of the LIK.
 
-I have a couple goals in mind. First, I want to begin to fill the dearth
-of studies comparing efficacy of the isomorphic keyboard to the
-traditional keyboard. If I find the LIK to be superior to the
-traditional keyboard, my next goals would be to gain publicity,
-facilitate adoption, and encourage further research. Ideally, this would
-incentivize companies with experience making musical keyboards to make
-LIKs so I don't have to 3D print keys for the rest of my life.
+I have a couple goals in mind. First, I want to begin to fill the dearth of studies comparing efficacy of isomorphic keyboards to the traditional keyboard. If I find the LIK to be superior to the traditional keyboard, my next goal would be to facilitate adoption and encourage further research. Ideally, this would incentivise companies with experience making musical keyboards to make LIKs so I don't have to 3D print keys for the rest of my life.
 
-If this is successful, we could collectively save the pianists around
-the world countless of hours of practice. The piano would be easier and
-more enjoyable to play. Pianists could spend less time on technique and
-transposition and spend more time making music.
+If this is successful, the piano would be easier and more enjoyable to play, and pianists would be saved countless of hours of practice. Pianists could spend less time on technique and transposition and spend more time making music.
 
 Stay tuned.
 
-<br>
+If you're still interested, you can read other articles about:
 
-If you're still interested, you can read:
+-   [Detailed reasoning about how I think the LIK will be better and why](https://likeyboard.io/articles/the-hypotheses/)
 
-<a href="/articles/the-experiment">An in depth description of the experiment</a>
+-   [An in depth description of the experiment](https://likeyboard.io/articles/the-experiment/)
 
-<a href="/articles/the-practice-routine">The details of how I will practice</a>
+-   [The details of how I will practice](https://likeyboard.io/articles/the-practice-routine/)
 
-<a href="/articles/other-isomorphic-keyboards">Why not another isomorphic keyboard?</a>
+-   [Why not another isomorphic keyboard?](https://likeyboard.io/articles/other-isomorphic-keyboards/)
 
-<br>
-<br>
+1.  Here is an example of what it sounds like to play in the wrong key on a non equal temperament keyboard: [https://www.youtube.com/watch?v=Yqa2Hbb\_eIs](https://www.youtube.com/watch?v=Yqa2Hbb_eIs)
 
-1.  [https://www.youtube.com/watch?v=Yqa2Hbb\_eIs](Here is an example) of what it
-    sounds like to play in the wrong key on a non equal temperament keyboard:
-    
+2.  Discussion of the differences between modality and tonality as well as the transition between the two extends far beyond the scope of this article. And this statement is partially false because pre-tonality people played in modes, not keys, and they used harmonizations with notes that didn't occur in the key they played in (if they were playing in keys). To learn a little more check out this: [https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music](https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music). For a deeper dive, with a good look at the transition from modality to tonality, check out this article: [https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer\_research](https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer_research)
 
-2.  Discussion of the differences between modality and tonality as well
-    as the transition between the two extends far beyond the scope of
-    this article. And this statement is partially false because
-    pre-tonality people played in modes, not keys, and they used
-    harmonizations with notes that didn't occur in the key they played
-    in (if they were playing in keys). To learn a little more check
-    out this:
-    [https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music](https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music).
-    For a deeper dive, with a good look at the transition from
-    modality to tonality, check out this article:
-    [https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer\_research](https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer_research)
+3.  "Isomorphism applied to musical instruments means that every distinct musical performance is executed in the same way, regardless of key or location." [http://smcnetwork.org/system/files/smc2011\_submission\_169.pdf](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
 
-3.  "Isomorphism applied to musical instruments means that every
-    distinct musical performance is executed in the same way,
-    regardless of key or location."
-    [http://smcnetwork.org/system/files/smc2011\_submission\_169.pdf](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
-
-4.  The traditional keyboard has four different ways to play a perfect
-    fifth: White key to white key (eg. C -\> G), white key to black
-    key (eg. B -\> F\#), black key to white key (eg. Bb -\> F), and
-    black key to black key (C\# -\> G\#). For more on this, check out <a href="/articles/the-experiment">this article</a>.
-
-  </div>
-</div>
+4.  The traditional keyboard has four different ways to play a perfect fifth: White key to white key (eg. C -\> G), white key to black key (eg. B -\> F\#), black key to white key (eg. Bb -\> F), and black key to black key (C\# -\> G\#). For more on this, check out [The Experiment](https://likeyboard.io/articles/the-experiment/).
