--- a/source/articles/the-practice-routine.html.md.erb
+++ b/source/articles/the-practice-routine.html.md.erb
@@ -1,10 +1,4 @@
-<div class="container article-show">
-  <section class="section section--top">
-    <div class="row">
-      <h1 class="col offset-lg-1">The Practice Routine</h1>
-    </div>
-    <div class="row">
-      <div class="col col-lg-8 offset-lg-1" markdown="1">
+# The Practice Routine
 
 ## Developing the curriculum
 
@@ -155,8 +149,3 @@ content of what I am going to practice here. You can see my progress
 [here](https://linearisomorphickeyboard.com/progress/).
 
 1.  There is a potential confounding variable in the order that I practice the keyboards if I practice both in the same day. If I always play the LIK first and the TK second, the LIK might benefit from my mind being fresh, or the TK might benefit from me already being warmed up. I am going to keep track of each time I practice both keyboards in one day, so the next time I practice both keyboards I can alternate the order.
-
-</div>
-</div>
-</section>
-</div>
