Revise other isomorphic keyboards.

--- a/source/articles/the-experiment.html.md.erb
+++ b/source/articles/the-experiment.html.md.erb
@@ -60,7 +60,7 @@ You can find out more about the curriculum and the reasoning behind it [[here]{.
 
 By the end of the experiment, I will have data that shows how long I played each exercise on each keyboard, what difficulty I can play any given exercise at, and how much practice it took me get to any given difficulty of any exercise on each keyboard. Using this data, I should not only be able to determine how proficient I am at the end of the experiment, but I should be able to measure my rate of improvement for each exercise, and identify technical limitations. You can see this data live [[here]{.underline}](https://linearisomorphickeyboard.com/progress/).
 
-I hope that with this data, I will be able to come to a conclusion about the playability of the linear isomorphic keyboard and how it compares to the traditional keyboard.
+I hope that with this data, I will be able to come to a conclusion about the playability of the Linear Isomorphic Keyboard and how it compares to the traditional keyboard.
 
 ## The Flaws
 
