--- a/source/articles/the-idea.html.md.erb
+++ b/source/articles/the-idea.html.md.erb
@@ -24,7 +24,7 @@ This is the Linear Isomorphic Keyboard.
 
 The term isomorphism, when applied to musical instruments, means that any distinct musical phrase---be it a chord or a sonata---can be played the same way regardless of the note that it starts on.<sup>3</sup>
 
-What does this mean? On the linear isomorphic keyboard (LIK) there is one way to play all of the major scales. You don't learn to play *a* major scale, you learn how to play *the* major scale. There is only one way to play a perfect fifth, instead of four.<sup>4</sup> If you can play "Für Elise" in one key, you can play it in every key.
+What does this mean? On the Linear Isomorphic Keyboard (LIK) there is one way to play all of the major scales. You don't learn to play *a* major scale, you learn how to play *the* major scale. There is only one way to play a perfect fifth, instead of four.<sup>4</sup> If you can play "Für Elise" in one key, you can play it in every key.
 
 This has been done before. There are plenty of isomorphic keyboards. Most of them feature a grid of square or hexagonal tiles, with the relation between adjacent tiles determined by particular intervals. But I think that similarities the LIK shares with the traditional keyboard [gives it an edge over other isomorphic keyboards](https://likeyboard.io/articles/other-isomorphic-keyboards/).
 
