--- a/source/articles/other-isomorphic-keyboards.html.md.erb
+++ b/source/articles/other-isomorphic-keyboards.html.md.erb
@@ -18,25 +18,21 @@ particular instance.
 
 ## The Similarity Advantage
 
-The similarities the linear isomorphic keyboard (LIK) shares with the
+The similarities the Linear Isomorphic Keyboard (LIK) shares with the
 traditional keyboard make the LIK easier to adopt in comparison to other
 isomorphic keyboards. This advantage manifests itself in two aspects of
 adopting the LIK.
 
 ### Ease of playing
 
-The likeness of the keyboards make the LIK easier for pianists to play,
+The likeness of the keyboards makes the LIK easier for pianists to play,
 as the skills needed to play the LIK are more transferable with the
 traditional keyboard than the skills needed for other isomorphic
 keyboards.
 
 Unlike the largely one-dimensional layout of the traditional keyboard
 (TK) and LIK, other isomorphic keyboards have a two dimensional
-grid-like structure composed of squares or hexagons. In the same way
-adjacent keys are a half step apart on the LIK, other isomorphic
-keyboards have keys that maintain a particular intervallic relationship
-between itself and adjacent keys. This added dimension changes the
-nature of performance on these keyboards.
+grid-like structure composed of squares or hexagons. This added dimension changes the nature of performance on these keyboards.
 
 To compare keyboards, here is one octave of the C major scale played
 with the right hand, with the fingers numbered from 1 to 5 counting from
@@ -52,15 +48,15 @@ LIK: 1-2-3-1-2-3-4-5
 
 <img src="/images/wiki-hayden-c-major.svg" />
 
-Wiki-Hayden: 1-2-3-(shift hand forward)-1-2-3-4-(shift hand forward)-1
+Wiki-Hayden: 2-3-4-(shift hand forward)-2-3-4-5-(shift hand forward)-2
 
 <img src="/images/janko-c-major.svg" />
 
-Janko: 1-2-3-(shift hand back)-1-2-3-4-(shift hand forward)-1
+Janko: 1-2-3-(shift hand back)-1-2-3-4-(shift hand forward)-5
 
 The LIK and the TK share nearly identical shapes and identical
 fingerings, while the other isomorphic keyboards require the pianist to
-shift forward on a completely new plane (the sagittal plane). I am not
+navigate a completely different plane. I am not
 claiming that the LIK has better fingerings than the other isomorphic
 layouts, but that the similarities to the traditional keyboard will make
 it easier to adopt.
@@ -70,15 +66,13 @@ it easier to adopt.
 The LIK is much easier to create than other isomorphic keyboards,
 because the LIK can share make components with the TK.
 
-When creating your own isomorphic keyboard, you have to create the case,
-the keys, the action for the keys, velocity sensitivity, wiring for the
-triggers, and more. If you are DIY-inclined,
+When creating your own isomorphic keyboard, you have to create the case, the keys, the triggers (hopefully at least with velocity sensitivity), wiring and more. If you are DIY-inclined,
 [this](http://rainboard.shiverware.com/Rainboard_-_DIY_Dynamic_Rainbow_Isomorphic_Keyboard)
 is an awesome project. But for the rest of us, the process of making an
 LIK is much more appealing, because instead of creating the keyboard
 from scratch, you buy a keyboard, open it up, and replace the keys.
 
-Okay it isn\'t *that* simple, for the independent layman it is still
+Okay it isn\'t that simple, for the independent layman it is still
 time intensive and expensive. Someone has to create the keys, and mass
 producing keys be difficult/expensive. I made mine by buying replacement
 black keys (\$25 + shipping), and then 3D printing extensions for the
@@ -97,11 +91,11 @@ keyboard should make it easier to produce.
 
 I have no reason to believe that the LIK is inherently superior to other
 isomorphic keyboards. But in the shadow of the ubiquitous traditional
-keyboard, similarity to the norm grants the linear isomorphic keyboard
+keyboard, similarity to the norm grants the Linear Isomorphic Keyboard
 an advantage in the ease of adoption.
 
 
 
 1.  ["Hexagonal isomorphic keyboards in a musical instrument probably stem from the early 19th century accordion or concertina."](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
 
-2.  You might have realized that the last link is in fact a link to Dodeka, a company that was once producing a linear isomorphic keyboard. This does make my work partially redundant. In my defense, they weren't selling this when I made the LIK.
+2.  You might have realized that the last link is in fact a link to Dodeka, a company that is selling a Linear Isomorphic Keyboard, which does kind of make  my work somewhat redundant. In my defense, they weren't selling this when I made the LIK.
